Reset to default of Sky Texture's Dot freezes it at 0,0,0 #37091

Closed
opened 2013-10-15 14:58:48 +02:00 by Greg Zaal · 3 comments
Member

%%%--- Operating System, Graphics card ---
Win7 64 bit, gtx 570

- Blender version with error, and version that worked ---

Broken in r60652 and back to 2.63. Don't have a version older than that.

- Short description of error ---

When hitting Backspace with the mouse over the Sky Texture's Dot vector (sun_direction) or right click > Reset All to Default Values, the dot turns black and click-dragging on it no longer has any affect, it's stuck like that.

Reset Single to Default Value does work as expected, just not Reset All to Default Values (or backspace)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

In cycles world settings, hit Use Nodes and connect a Sky Texture to the background shader's color. Then with the mouse over the sphere, hit backspace. Now click-dragging on the sphere to rotate it does nothing.

%%%

%%%--- Operating System, Graphics card --- Win7 64 bit, gtx 570 - Blender version with error, and version that worked --- Broken in r60652 and back to 2.63. Don't have a version older than that. - Short description of error --- When hitting Backspace with the mouse over the Sky Texture's Dot vector (sun_direction) or right click > Reset All to Default Values, the dot turns black and click-dragging on it no longer has any affect, it's stuck like that. Reset *Single* to Default Value does work as expected, just not Reset *All* to Default Values (or backspace) - Steps for others to reproduce the error (preferably based on attached .blend file) --- In cycles world settings, hit Use Nodes and connect a Sky Texture to the background shader's color. Then with the mouse over the sphere, hit backspace. Now click-dragging on the sphere to rotate it does nothing. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev60818. Thanks for the report, closing.%%%

%%%Fixed in svn rev60818. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37091
No description provided.