Fix #37091: Reset to default of Sky Texture's Dot freezes it at 0,0,0