source/blender/makesrna/intern/rna_nodetree.c
@@ -3256,6 +3256,7 @@ static void def_sh_tex_sky(StructRNA *srna)
 		{SHD_SKY_NEW, "HOSEK_WILKIE", 0, "Hosek / Wilkie", ""},
 		{0, NULL, 0, NULL, NULL}
 	};
+	static float default_dir[3] = {0.0f, 0.0f, 1.0f};
 	
 	PropertyRNA *prop;
 	
@@ -3270,6 +3271,8 @@ static void def_sh_tex_sky(StructRNA *srna)
 	
 	prop = RNA_def_property(srna, "sun_direction", PROP_FLOAT, PROP_DIRECTION);
 	RNA_def_property_ui_text(prop, "Sun Direction", "Direction from where the sun is shining");
+	RNA_def_property_array(prop, 3);
+	RNA_def_property_float_array_default(prop, default_dir);
 	RNA_def_property_update(prop, NC_NODE | NA_EDITED, "rna_Node_update");
 	
 	prop = RNA_def_property(srna, "turbidity", PROP_FLOAT, PROP_NONE);
